--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=GrafitexSGH
 APP_ENV=local
-APP_KEY=base64:9jOGa1C2d7kjNnBQA/0NTXfz80qYYYB7DZYu5y/3CTs=
+APP_KEY=base64:
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=grafitexsgh
-DB_USERNAME=mosketxu
-DB_PASSWORD=Braggelone
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
